kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-php-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-php-app
  template:
    metadata:
      labels:
        app: simple-php-app
    spec:
      containers:
      - name: simple-php-app
        # image: your-dockerhub-username/simple-php-app:latest
        image: simple-php-app:latest # Use the local image name
        imagePullPolicy: Never       # Prevent Kubernetes from trying to pull the image from a registry
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
