kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-php-app
spec:
  # type: ClusterIP
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: simple-php-app
